# roboverse

./: .dockerignore  Dockerfile  ROADMAP.md  pyproject.toml
.devcontainer/: devcontainer.json
LIBERO/benchmark_scripts/: replay_libero_demo.py  replay_libero_suite.py
dashboard/: conf.yml  minimal_test_script.py  run_test.py
docs/: README.md
docs/source/: index.md
generation/: README.md  __init__.py  asset_converter.py
get_started/: 0_static_scene.py  10_mount_camera.py  11_light_setting.py  13_get_exras.py  14_real_assets.py  16_embodiedgen_layout.py  1_control_robot.py  2_add_new_robot.py  3_parallel_envs.py  4_motion_planning.py  5_hybrid_sim.py  6_advanced_rendering.py  7_multiple_robots.py  9_cfg_task.py  multiple_cameras.py
get_started/dexhands/: 0_control_dexhands.py
get_started/motion_planning/: 0_franka_planning.py  1_object_grasping.py  2_water_pouring.py
get_started/obj_layout/: README.md  object_layout_task.py
get_started/rerun/: replay_task_demo.py  rerun_demo.py  save_trajectory.py  save_trajectory_simple.py
get_started/viser/: README.md  VISER_USAGE_GUIDE.md  viser_demo.py
metasim/: __init__.py  constants.py  types.py
metasim/example/: __init__.py  control_test.py  replay_test.py
metasim/queries/: base.py  contact_force.py  site.py
metasim/randomization/: base.py  camera_randomizer.py  light_randomizer.py  material_randomizer.py  object_randomizer.py
metasim/scenario/: lights.py  objects.py  scene.py  simulator_params.py
metasim/sim/: __init__.py  parallel.py  sim_context.py
metasim/task/: base.py  test.py
metasim/test/: conftest.py  isaacgym_entry.py  test_utils.py
metasim/utils/: gs_util.py  ik_solver.py  kinematics.py  parse_util.py  setup_util.py  state.py  teleop_utils.py
release/: MANIFEST.in  README.md  metasim  pyproject.toml
roboverse_learn/rl/: episode_tracker.py
roboverse_learn/vla/: README.md
roboverse_pack/asset/: setup_interior_agent_assets.py
roboverse_pack/queries/: __init__.py  contact.py  lidar.py  sensor.py  site.py
roboverse_pack/randomization/: __init__.py  humanoid.py
roboverse_pack/robots/: aloha.py  arx_l5_mjcf_cfg.py  fetch_cfg.py  franka_cfg.py  franka_slide_urdf_cfg.py  franka_slide_urdf_sapien_cfg.py  franka_urdf_cfg.py  franka_urdf_sapien_cfg.py  franka_with_gripper_extension_cfg.py  g1_feet.py  google_robot_static_cfg.py  h1_2_without_hand_cfg.py  h1_cfg.py  h1_hand_cfg.py  h1_simple_hand_cfg.py  h1_wrist_cfg.py  iiwa14_cfg.py  iiwa_cfg.py  kinova_gen3_cfg.py  kinova_gen3_robotiq_2f85.py  koch_mjcf_cfg.py  lite6_mjcf_cfg.py  sawyer_cfg.py  sawyer_mujoco_cfg.py  shadow_hand_cfg.py  so_arm100_mjcf_cfg.py  unitree_dex3_1_cfg.py  ur10e_cfg.py  ur5e_2f85_cfg.py  ur5e_cfg.py  walker_cfg.py  yam_mjcf_cfg.py
roboverse_pack/scenes/: __init__.py  kujiale_scene_0003_cfg.py  kujiale_scene_0004_cfg.py  kujiale_scene_0008_cfg.py  kujiale_scene_0009_cfg.py  kujiale_scene_0020_cfg.py  kujiale_scene_0021cfg.py  kujiale_scene_0024_cfg.py  kujiale_scene_0025_cfg.py  (+5 more)
(+336 files in other folders)
